--- a/CECePortal/verification.html
+++ b/CECePortal/verification.html
@@ -16,44 +16,36 @@
     <div class="row justify-content-center flex-grow-1">
         <div class="col-12 col-md-6 col-lg-4" style="min-width: 500px;">
             <div class="card bg-white mb-5 mt-5 border-0" style="box-shadow: 0 12px 15px rgba(0, 0, 0, 0.1);">
+                <div class="header-icons unselectable">
+                    <a href="/CECePortal/index.html" class="house-icon unselectable">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
+                        </svg>
+                    </a>
+                </div>
                 <div class="card-body p-5 text-center">
-                    <h4>Verify</h4>
+                    <h4>Verify your Account</h4>
                     <p>Your code was sent to you via email</p>
                     <div class="otp-field mb-4">
-                        <input type="text" maxlength="1" />
-                        <input type="text" maxlength="1" disabled />
-                        <input type="text" maxlength="1" disabled />
-                        <input type="text" maxlength="1" disabled />
-                        <input type="text" maxlength="1" disabled />
-                        <input type="text" maxlength="1" disabled />
+                        <input type="text" maxlength="1" id="otp-1" name="otp-1" />
+                        <input type="text" maxlength="1" id="otp-2" name="otp-2" disabled />
+                        <input type="text" maxlength="1" id="otp-3" name="otp-3" disabled />
+                        <input type="text" maxlength="1" id="otp-4" name="otp-4" disabled />
+                        <input type="text" maxlength="1" id="otp-5" name="otp-5" disabled />
+                        <input type="text" maxlength="1" id="otp-6" name="otp-6" disabled />
                     </div>
-                    <!-- <button class="btn btn-primary mb-3" disabled id="btnVerifyOTP">
-                        Verify OTP
-                    </button> -->
-
                     <div class="form-actions unselectable">
                         <button type="submit" id="btnVerifyOTP" class="btn">Verify OTP</button>
                     </div>
                     
                     <p class="resend text-muted mb-0">
-                        Didn't receive code? <a href="#">Request again</a>
+                        Didn't receive code? <a href="#">Resend OTP verification code.</a>
                     </p>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer>
-        <div class="footer-content unselectable">
-            <div class="footer-links unselectable"><a href="index.html">Home</a><a
-                    href="enrol_students.html">Registration</a><a href="contact-us.html">Contact</a>
-            </div>
-            <div class="footer-info unselectable">
-                <p>&copy; 2024 Catholic Education Comission (CEC). All rights reserved.</p>
-                <p>Catholic Education Comission, Nigeria</p>
-            </div>
-        </div>
-    </footer>
     <!-- Notification Bar -->
     <div id="notification-bar" class="notification-bar">
         <span id="notification-message" class="notification-message"></span>
