Updated_verification_form

--- a/CECePortal/verification.html
+++ b/CECePortal/verification.html
@@ -39,7 +39,7 @@
                     </div>
                     
                     <p class="resend text-muted mb-0">
-                        Didn't receive code? <a href="#">Resend OTP verification code.</a>
+                        Didn't receive code? <a href="#" id="resendOTP">Resend OTP verification code.</a>
                     </p>
                 </div>
             </div>
