--- a/CECePortal/verification.html
+++ b/CECePortal/verification.html
@@ -54,5 +54,6 @@
     <div id="notification" class="notification unselectable"></div>
     <script src="/CECePortal/public/OTPs/verification.min.js"></script>
     <script type="text/javascript" src="/CECePortal/public/Global/glob.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </body>
 </html>
