--- a/CECePortal/centre-enroll.html
+++ b/CECePortal/centre-enroll.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +21,7 @@
         <div class="loader"></div>
         <p>Loading... Please wait.</p>
     </div>
-    
+
     <div class="login-container unselectable">
         <div class="login-left unselectable">
             <a href="/CECePortal/index.html"><img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo" /></a>
@@ -37,8 +38,10 @@
         <div class="login-right unselectable">
             <div class="header-icons unselectable">
                 <a href="/CECePortal/index.html" class="house-icon unselectable">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-                        <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        class="bi bi-house" viewBox="0 0 16 16">
+                        <path
+                            d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
                     </svg>
                 </a>
             </div>
@@ -166,6 +169,7 @@
 
     <script src="/CECePortal/public/Centres/centre_enrollment.js"></script>
     <script src="/CECePortal/public/Global/glob.js"></script>
-   
+
 </body>
+
 </html>
