--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -40,7 +40,7 @@
                             <p class="hero-paragraph">... Expand possibilities</p>
 
                             <div class="hero-cta">
-                                <a class="button button-primary" href="https://bit.ly/AcadHub">Academic Hub</a>
+                                <a class="button button-primary" href="https://bit.ly/AcadHub_x64">Academic Hub</a>
                                 <a class="button button-primary" href="https://bit.ly/AcHubx32">Academic Hub x32</a>
                                 <p></p>
                                 <p></p>
