--- a/LicGen/public/index.html
+++ b/LicGen/public/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://gpsmartapps.github.io https://www.dropbox.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://www.dropbox.com;">
+
   <title>Smart LicGen</title>
 </head>
 
