--- a/SmartLic/index.html
+++ b/SmartLic/index.html
@@ -6,22 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>License Key Generator</title>
 
-    <!-- Corrected External CSS Link -->
-    <link rel="icon" href="https://dl.dropboxusercontent.com/s/7nfhhr0f8hmq4743ngexq/favicon1.ico" />
-    <link rel="stylesheet"
-        href="https://dl.dropboxusercontent.com/scl/fi/kaxhtaw1vt6ju5gpf4cm3/index.css?rlkey=4hmtr90vky86rxkylcm7v7pew&dl=1" />
-
-    <!-- Include React Toastify CSS -->
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/react-toastify/9.1.2/ReactToastify.min.css" />
+    <link rel="stylesheet" href="index.css" />
+
 </head>
 
 <body>
 
     <div class="container">
         <!-- Logo -->
-        <img src="https://www.dropbox.com/scl/fi/8f0bbi5enh8a8m5gi97o7/logo2.png?rlkey=p87ertb6ku1rfcxcntmm7krgu&dl=1"
-            alt="Logo" style="width: 150px; margin-bottom: 20px;" oncontextmenu="handleRightClick(event)" />
-
+        <img src="https://www.dropbox.com/scl/fi/d5fujjjgab8f0ji6wsnlr/logo2.png?rlkey=8tw9w36dj8kqcma94xzhn2t3o&dl=1"
+            alt="Logo" style="width: 120px; margin-bottom: 20px;" />
         <h1>License Key Generator</h1>
 
         <!-- Input fields -->
@@ -49,13 +45,12 @@
         </div>
     </div>
 
-    <!-- Toast Notifications -->
     <div id="toast-container"></div>
 
-    <!-- Corrected External JS Link -->
-    <script
-        src="https://dl.dropboxusercontent.com/scl/fi/7q1y63fud98h4lnacjq3o/index.js?rlkey=akhkh7kyjoy8ovzxhz0m7robr&dl=1"></script>
+    <!-- Local JS Links -->
+    <script type="module" src="index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-toastify/9.1.2/ReactToastify.min.js"></script>
+
 </body>
 
 </html>
