--- a/SmartLic/index.html
+++ b/SmartLic/index.html
@@ -16,8 +16,13 @@
 
     <div class="container">
         <!-- Logo -->
+        <!-- Use logo from Dropbox (URL-based) -->
         <img src="https://www.dropbox.com/scl/fi/d5fujjjgab8f0ji6wsnlr/logo2.png?rlkey=8tw9w36dj8kqcma94xzhn2t3o&dl=1"
             alt="Logo" style="width: 120px; margin-bottom: 20px;" />
+
+        <!-- Use local logo (logo2.png) -->
+        <img src="logo2.png" alt="Logo" style="width: 120px; margin-bottom: 20px;" />
+
         <h1>License Key Generator</h1>
 
         <!-- Input fields -->
@@ -50,6 +55,22 @@
     <!-- Local JS Links -->
     <script type="module" src="index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-toastify/9.1.2/ReactToastify.min.js"></script>
+    <script>
+        const logoUrl = "https://www.dropbox.com/scl/fi/d5fujjjgab8f0ji6wsnlr/logo2.png?rlkey=8tw9w36dj8kqcma94xzhn2t3o&dl=1";
+        const logoImage = document.querySelector('img');
+
+        // Check if the image from Dropbox is loaded
+        const img = new Image();
+        img.src = logoUrl;
+
+        img.onload = function () {
+            logoImage.src = logoUrl; // Use the Dropbox image if it loads
+        };
+
+        img.onerror = function () {
+            logoImage.src = "logo2.png"; // Fallback to local image if the Dropbox image fails
+        };
+    </script>
 
 </body>
 
