--- a/SmartLic/index.html
+++ b/SmartLic/index.html
@@ -17,8 +17,8 @@
     <div class="container">
         <!-- Logo -->
         <!-- Use logo from Dropbox (URL-based) -->
-        <img src="https://www.dropbox.com/scl/fi/d5fujjjgab8f0ji6wsnlr/logo2.png?rlkey=8tw9w36dj8kqcma94xzhn2t3o&dl=1"
-            alt="Logo" style="width: 120px; margin-bottom: 20px;" />
+        <!-- <img src="https://www.dropbox.com/scl/fi/d5fujjjgab8f0ji6wsnlr/logo2.png?rlkey=8tw9w36dj8kqcma94xzhn2t3o&dl=1"
+            alt="Logo" style="width: 120px; margin-bottom: 20px;" /> -->
 
         <!-- Use local logo (logo2.png) -->
         <img src="logo2.png" alt="Logo" style="width: 120px; margin-bottom: 20px;" />
