--- a/SmartLic/index.html
+++ b/SmartLic/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Ensures compatibility mode in IE -->
-    
+
     <meta name="description" content="Seamlessly generate license key for your Academic apps.">
     <meta name="keywords" content="license, key, academic, academy, academic hub">
     <meta name="author" content="Digispower LLC">
@@ -19,7 +19,7 @@
     <meta name="twitter:title" content="Seamlessly generate license key for your Academic apps.">
     <meta name="twitter:description" content="Seamlessly generate license key for your Academic apps.">
     <meta name="twitter:image" content="https://gpsmartapps.github.io/CECePortal/assets/logo/logo2.png">
-    <meta name="twitter:site" content="@LicGen">
+    <meta name="twitter:site" content="@SmartLic">
     <meta property="og:locale" content="en_US">
     <meta property="og:locale:alternate" content="en_GB">
     <meta property="og:site_name" content="Digispower LLC">
@@ -31,33 +31,40 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/react-toastify/9.1.2/ReactToastify.min.css" />
     <link rel="stylesheet" href="index.css" />
-    
+
     <!-- Polyfill for older browsers (Internet Explorer support) -->
-    <script src="https://cdn.polyfill.io/v3/polyfill.min.js?features=default,fetch,Promise,Array.prototype.includes,Object.assign"></script>
+    <script
+        src="https://cdn.polyfill.io/v3/polyfill.min.js?features=default,fetch,Promise,Array.prototype.includes,Object.assign"></script>
 
     <!-- Add CSS Vendor Prefixes for better Flexbox and other support -->
     <style>
         /* Flexbox and other CSS improvements for IE */
         .container {
-            display: -ms-flexbox; /* IE10 */
+            display: -ms-flexbox;
+            /* IE10 */
             display: flex;
-            -ms-flex-direction: column; /* IE10 */
+            -ms-flex-direction: column;
+            /* IE10 */
             flex-direction: column;
-            -ms-align-items: center; /* IE10 */
+            -ms-align-items: center;
+            /* IE10 */
             align-items: center;
-            -ms-justify-content: center; /* IE10 */
+            -ms-justify-content: center;
+            /* IE10 */
             justify-content: center;
         }
 
         button {
             display: block;
-            -ms-flex: 1; /* IE10 */
+            -ms-flex: 1;
+            /* IE10 */
             flex: 1;
         }
 
         input {
             display: block;
-            -ms-flex: 1; /* IE10 */
+            -ms-flex: 1;
+            /* IE10 */
             flex: 1;
         }
 
