--- a/SmartLic/index.html
+++ b/SmartLic/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Ensures compatibility mode in IE -->
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> Ensures compatibility mode in IE -->
 
     <meta name="description" content="Seamlessly generate license key for your Academic apps.">
     <meta name="keywords" content="license, key, academic, academy, academic hub">
