--- a/SmartLic2/index.html
+++ b/SmartLic2/index.html
@@ -12,13 +12,13 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Seamlessly generate license key for your Academic apps.">
     <meta property="og:description" content="Seamlessly generate license key for your Academic apps.">
-    <meta property="og:image" content="https://gpsmartapps.github.io/CECePortal/assets/logo/logo2.png">
+    <meta property="og:image" content="https://www.dropbox.com/scl/fi/d5fujjjgab8f0ji6wsnlr/logo2.png?rlkey=8tw9w36dj8kqcma94xzhn2t3o&st=nffnc7uy&dl=1"> 
     <meta property="og:url" content="https://gpsmartapps.github.io/LicGen">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Seamlessly generate license key for your Academic apps.">
     <meta name="twitter:description" content="Seamlessly generate license key for your Academic apps.">
-    <meta name="twitter:image" content="https://gpsmartapps.github.io/CECePortal/assets/logo/logo2.png">
+    <meta name="twitter:image" content="https://www.dropbox.com/scl/fi/d5fujjjgab8f0ji6wsnlr/logo2.png?rlkey=8tw9w36dj8kqcma94xzhn2t3o&st=nffnc7uy&dl=1">
     <meta name="twitter:site" content="@SmartLic">
     <meta property="og:locale" content="en_US">
     <meta property="og:locale:alternate" content="en_GB">
@@ -125,7 +125,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-toastify/9.1.2/ReactToastify.min.js"></script>
 
     <script>
-        const logoUrl = "https://www.dropbox.com/scl/fi/d5fujjjgab8f0ji6wsnlr/logo2.png?rlkey=8tw9w36dj8kqcma94xzhn2t3o&dl=1";
+        const logoUrl = "https://www.dropbox.com/scl/fi/d5fujjjgab8f0ji6wsnlr/logo2.png?rlkey=8tw9w36dj8kqcma94xzhn2t3o&st=nffnc7uy&dl=1";
         const logoImage = document.querySelector('img');
 
         const img = new Image();
