--- a/LicGen/SmartLic/index.html
+++ b/LicGen/SmartLic/index.html
@@ -45,6 +45,11 @@
                 <h2>Generated License Key:</h2>
                 <p id="license-key"></p>
             </div>
+
+<!-- "Send License via Email" Button (Initially Hidden) -->
+<button id="send-email-btn" style="display: none; margin-top: 10px;">
+    Send License via Email
+</button>
         </div>
     </div>
     <script type="module" src="index.js"></script>
