--- a/SmartLic/index.html
+++ b/SmartLic/index.html
@@ -42,7 +42,7 @@
             <button id="generate-btn">Generate License Key</button>
 
             <div id="generated-key" class="generated-key" style="display: none;">
-                <h2>Generated License Key:</h2>
+                <h2>License Key:</h2>
                 <p id="license-key"></p>
             </div>
 
