--- a/LicGen/SmartLic2/index.html
+++ b/LicGen/SmartLic2/index.html
@@ -110,7 +110,7 @@
 
         <!-- Generated License Key -->
         <div id="generated-key" class="generated-key" style="display: none;">
-            <h2>Generated License Key:</h2>
+            <h2>License Key:</h2>
             <p id="license-key"></p>
         </div>
     </div>
