--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -130,6 +130,9 @@
         <a class="app-link" href="https://www.i3hub.com/installation/acadhub_32.exe" download>
             <img src="https://cdn-icons-png.flaticon.com/512/2991/2991148.png" alt="App Icon"> Academic Hub (x32)
         </a>
+        <a class="app-link" href="https://www.i3hub.com/installation/smartbece.exe" download>
+            <img src="https://cdn-icons-png.flaticon.com/512/2991/2991148.png" alt="App Icon"> Smart BECE
+        </a>
         <a class="app-link" href="https://bit.ly/w3marketplace" target="_blank">
             <img src="https://cdn-icons-png.flaticon.com/512/1077/1077976.png" alt="Market Icon"
                 style="filter: invert(1);"> Market Place
