--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -122,16 +122,24 @@
     <!-- Download Section -->
     <div class="container">
         <a class="app-link" href="https://www.i3hub.com/installation/acadhub.exe" download>
-            <img src="https://cdn-icons-png.flaticon.com/512/2991/2991148.png" alt="App Icon"> Academic Hub (x64)
+            <img src="https://www.dropbox.com/scl/fi/tiq2bifo1h02hv93q29fn/logo.png?rlkey=c6p2ynwf9158gdlldfiioq3b4&dl=1"
+                alt="App Icon">
+            Academic Hub (x64)
         </a>
         <a class="app-link" href="https://www.i3hub.com/installation/smartssce.exe" download>
-            <img src="https://cdn-icons-png.flaticon.com/512/843/843227.png" alt="App Icon"> Smart SSCE
+            <img src="https://www.dropbox.com/scl/fi/jvghnhgmnjamk5jc8rmas/mdle_logo.png?rlkey=o1zqlwvjv7wdf3op4ffbi95ma&dl=1"
+                alt="App Icon"> Smart
+            SSCE
         </a>
         <a class="app-link" href="https://www.i3hub.com/installation/acadhub_32.exe" download>
-            <img src="https://cdn-icons-png.flaticon.com/512/2991/2991148.png" alt="App Icon"> Academic Hub (x32)
+            <img src="https://www.dropbox.com/scl/fi/tiq2bifo1h02hv93q29fn/logo.png?rlkey=c6p2ynwf9158gdlldfiioq3b4&dl=1"
+                alt="App Icon">
+            Academic Hub (x32)
         </a>
         <a class="app-link" href="https://www.i3hub.com/installation/smartbece.exe" download>
-            <img src="https://cdn-icons-png.flaticon.com/512/2991/2991148.png" alt="App Icon"> Smart BECE
+            <img src="https://www.dropbox.com/scl/fi/vd730yq3xsa4jiwlbgx10/_bcelogo_.png?rlkey=7e4knopvvq5pvdivb69ppifr7&dl=1"
+                alt="App Icon"> Smart
+            BECE
         </a>
         <a class="app-link" href="https://bit.ly/w3marketplace" target="_blank">
             <img src="https://cdn-icons-png.flaticon.com/512/1077/1077976.png" alt="Market Icon"
