--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -121,17 +121,19 @@
 
     <!-- Download Section -->
     <div class="container">
-        <a class="app-link" href="https://www.i3hub.com/installation/acadhub.exe" download>
+        <a class="app-link" href="https://bit.ly/AcadHub_x64" download>
             <img src="https://www.dropbox.com/scl/fi/tiq2bifo1h02hv93q29fn/logo.png?rlkey=c6p2ynwf9158gdlldfiioq3b4&dl=1"
                 alt="App Icon">
             Academic Hub (x64)
         </a>
-        <a class="app-link" href="https://www.i3hub.com/installation/smartssce.exe" download>
+        <a class="app-link"
+            href="https://www.dropbox.com/scl/fi/zd243ajmdlvbu6ohmhwvi/Smart-SSCE.exe?rlkey=qb3yw7lx72arpzxezm9cq42ux&dl=1"
+            download>
             <img src="https://www.dropbox.com/scl/fi/jvghnhgmnjamk5jc8rmas/mdle_logo.png?rlkey=o1zqlwvjv7wdf3op4ffbi95ma&dl=1"
                 alt="App Icon"> Smart
             SSCE
         </a>
-        <a class="app-link" href="https://www.i3hub.com/installation/acadhub_32.exe" download>
+        <a class="app-link" href="https://bit.ly/AcHubx32" download>
             <img src="https://www.dropbox.com/scl/fi/tiq2bifo1h02hv93q29fn/logo.png?rlkey=c6p2ynwf9158gdlldfiioq3b4&dl=1"
                 alt="App Icon">
             Academic Hub (x32)
