--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -121,7 +121,9 @@
 
     <!-- Download Section -->
     <div class="container">
-        <a class="app-link" href="https://bit.ly/AcadHub_x64" download>
+        <a class="app-link"
+            href="https://www.dropbox.com/scl/fi/gbqq776f8ncbd6h4vngnj/Academic-Hub.exe?rlkey=e1ac3irjobx987cr4ijidrmbl&dl=1"
+            download>
             <img src="https://www.dropbox.com/scl/fi/tiq2bifo1h02hv93q29fn/logo.png?rlkey=c6p2ynwf9158gdlldfiioq3b4&dl=1"
                 alt="App Icon">
             Academic Hub (x64)
@@ -133,7 +135,9 @@
                 alt="App Icon"> Smart
             SSCE
         </a>
-        <a class="app-link" href="https://bit.ly/AcHubx32" download>
+        <a class="app-link"
+            href="https://www.dropbox.com/scl/fi/9vafmyae07jciw3n5s55h/Academic-Hub-x32.exe?rlkey=zhhf34ynw99xlc827rjulwehq&dl=1"
+            download>
             <img src="https://www.dropbox.com/scl/fi/tiq2bifo1h02hv93q29fn/logo.png?rlkey=c6p2ynwf9158gdlldfiioq3b4&dl=1"
                 alt="App Icon">
             Academic Hub (x32)
