--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -43,7 +43,7 @@
             color: #FFD700;
         }
 
-        /* App Container - Techy Neon Look */
+        /* App Container - Techy Neon Teal Glow */
         .container {
             max-width: 500px;
             margin: 40px auto;
@@ -51,28 +51,28 @@
             background: rgba(0, 0, 0, 0.8);
             backdrop-filter: blur(15px);
             border-radius: 12px;
-            box-shadow: 0 0 15px rgba(0, 255, 255, 0.5),
-                0 0 25px rgba(0, 255, 255, 0.3);
-            border: 1px solid rgba(0, 255, 255, 0.5);
+            box-shadow: 0 0 15px rgba(30, 181, 128, 0.5),
+                0 0 25px rgba(30, 181, 128, 0.3);
+            border: 1px solid rgba(30, 181, 128, 0.5);
             animation: neonGlow 1.5s infinite alternate;
         }
 
         /* Neon Glow Animation */
         @keyframes neonGlow {
             from {
-                box-shadow: 0 0 10px rgba(0, 255, 255, 0.3),
-                    0 0 20px rgba(0, 255, 255, 0.2);
+                box-shadow: 0 0 10px rgba(30, 181, 128, 0.3),
+                    0 0 20px rgba(30, 181, 128, 0.2);
             }
 
             to {
-                box-shadow: 0 0 20px rgba(0, 255, 255, 0.7),
-                    0 0 30px rgba(0, 255, 255, 0.5);
+                box-shadow: 0 0 20px rgba(30, 181, 128, 0.7),
+                    0 0 30px rgba(30, 181, 128, 0.5);
             }
         }
 
-        /* Background Grid (Subtle Tech Pattern) */
+        /* Background Gradient - Dark Cyber Tech */
         body {
-            background: linear-gradient(to right, #000428, #004e92);
+            background: linear-gradient(to right, #001f1a, #1eb580);
             background-size: cover;
         }
 
